# webserver

./: .gitignore  LICENSE.txt  README.md  enums.py  main.py  pyhtml.py  pyproject.toml  routes.py  test.py  typedefs.py
static/: style.css
webserver/: __init__.py  enums.py  error_handlers.py  exceptions.py  log_formatter.py  main.py  routes.py  typedefs.py  webserver.py
