[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
# Define metadata for your project here
name = "Webserver"
version = "0.0.1"
description = "A webserver written from scratch in Python"
readme = "README.md"
authors = [{name = "Alec Jensen", email = "alec@alecj.tk"}]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["webserver", "http", "server"]
dependencies = []
packages = ["webserver"]